--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,6 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.0.1",
-    "multer": "^1.4.5-lts.1",
-    "path": "^0.12.7"
+    "multer": "^1.4.5-lts.1"
   }
 }
